# whirlybird

./: README.md
src/wb_msgs/: CMakeLists.txt  README.md  package.xml
src/wb_msgs/launch/: serial.launch
src/wb_msgs/msg/: Command.msg  WbReferenceStates.msg
src/wb_st_control/: CMakeLists.txt  README.md  package.xml
src/wb_st_control/launch/: hw.launch  sim.launch
src/wb_st_control/lib/: pre_compiled_controller
src/wb_st_control/param/: whirlybird.yaml  whirlybird_new.yaml
src/wb_st_control/scripts/: controllerh.py  controllerh_new.py
src/wb_st_control/src/: pid_controller
src/wb_st_dynamics/: CMakeLists.txt  README.md  package.xml
src/wb_st_dynamics/launch/: dynamics_viz.launch
src/wb_st_dynamics/scripts/: .wb_dynamics.py.swo  test.py  wb_dynamics.py  wb_dynamics_new.py
src/wb_viz/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
src/wb_viz/launch/: visualize.launch
src/wb_viz/rviz/: whirlybird.rviz
src/wb_viz/scripts/: joint_state_publisher.py
src/wb_viz/src/: whirlybird_panel.cpp  whirlybird_panel.h
